# blenditor

./: .gitignore  CMakeLists.txt  README  README.md  build_solution  project  run
built/: __init__.py
data/: test.blend
source/: __init__.py  cy_export.py  main.py  test_convexify.py
source/addon/: blenditor.py  cy_export.py  main.py  test.py
source/convexify/: convexify.cpp  convexify.h  globals.h  io.cpp  io.h  py_debug.cpp  py_debug.h  test.py  transform.cpp  transform.h
source/convexify/sln/: convexify.sln  convexify.vcxproj  convexify.vcxproj.filters
test/testing/: Source.cpp
